<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Nabox</string>
    <string name="digits">0123456789.qwertyuiopasdfghjklzxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM</string>
    <string name="next">下一步</string>
    <string name="welcome">欢迎来到Nabox</string>
    <string name="welcome2">我们将带你一起畅游区块链世界</string>
    <string name="create_wallet">创建新的钱包或导入已有钱包</string>
    <string name="choice_currency">请选择您经常使用的货币单位</string>
    <string name="add_wallet">创建钱包</string>
    <string name="import_wallet">导入钱包</string>
    <string name="password_hint">密码用来保护私钥授权，请不要使用过于简单的密码；Nabox不存储密码，也无法帮您找回，请务必牢记密码</string>
    <string name="wallet_name">钱包名称</string>
    <string name="password">密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="read_agree">我已仔细阅读并同意</string>
    <string name="service_sule">服务及隐私条款</string>
    <string name="agree_and_create_wallet">同意并创建钱包</string>
    <string name="keystore_import">Keystore导入</string>
    <string name="mnemonic_word_import">助记词导入</string>
    <string name="personal_key_import">私钥导入</string>
    <string name="copy_your_code">抄写你的助记词</string>
    <string name="confirm_your_wallet_code">确认你的钱包助记词</string>
    <string name="use_keystore_import">使用Keystore导入</string>
    <string name="use_keystore_import_hint">将你的钱包Keystore复制到下方输入框内，或通过文件访问的形式导入</string>
    <string name="add_keystore_file">添加KeyStore文件</string>
    <string name="keystore_file_content">Keystore文件内容</string>
    <string name="wallet_password">钱包密码</string>
    <string name="what_is_keystore">什么是Keystore？</string>
    <string name="use_mnemonic_word_import_wallet">使用助记词导入</string>
    <string name="mnemonic_word_import_hint">输入助记词用单个空格分离，例如：home lazy leader</string>
    <string name="what_is_mnemonic_word">什么是助记词</string>
    <string name="use_personal_key_import_hint">将你的钱包私钥复制到下方输入框内，或通过文件访问的形式导入</string>
    <string name="personal_ket_content">私钥内容</string>
    <string name="what_is_personal_key">什么是私钥</string>
    <string name="safe">安全</string>
    <string name="normal">一般</string>
    <string name="danger">危险</string>
    <string name="backup_mnemonic_word">备份助记词</string>
    <string name="press_code_and_check">请按顺序点击助记词，以确定你的备份正确</string>
    <string name="sure">确定</string>
    <string name="total_assets">总资产</string>
    <string name="warning">安全警告</string>
    <string name="warning_content">私钥未经加密，导出会存在极大风险！建议使用助记词和Keystore进行备份！ 若依然使用私钥备份，建议将手机切换至飞行模式下离网操作。</string>
    <string name="know_danger_next">我已知晓风险继续备份</string>
    <string name="copy_personal_key">复制私钥</string>
    <string name="copy_personal_key_warning">请务必离线保存私钥 切勿通过网络传输私钥，以防遭到恶意窃取，造成财产损失</string>
    <string name="personal_key">私钥</string>
    <string name="backup_hint">助记词确认正确，Nabox将从系统中删除您的助记词，请妥善保管您的备份，如果丢失将永远不可找回，Nabox不承担任何钱包丢失、被盗、忘记密码等产生的资产损失！</string>
    <string name="backup_success">备份完成</string>
    <string name="import_success">导入成功</string>
    <string name="set_wallet_password">设置钱包密码</string>
    <string name="input_wallet_password">输入钱包密码</string>
    <string name="use_personal_key_import">使用私钥导入</string>
    <string name="activites">Ecology</string>
    <string name="more_wallet">More Wallet</string>
    <string name="edit">编辑</string>
    <string name="transfer_accounts">转账</string>
    <string name="receivables">收款</string>
    <string name="delete_wallet">删除钱包</string>
    <string name="buckup_keystore">备份Keystore</string>
    <string name="backup_personal_key">备份私钥</string>
    <string name="backup_mnemonics">备份助记词</string>
    <string name="wallet_edit">钱包编辑</string>
    <string name="already_copy">已复制</string>
    <string name="Contacts">联系人</string>
    <string name="help_center">帮助中心</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="language_settings">语言设置</string>
    <string name="common_currency_unit">常用货币单位</string>
    <string name="safety_protection">安全防护</string>
    <string name="input_password">请输入密码</string>
    <string name="old_name">原名称</string>
    <string name="cancel">取消</string>
    <string name="password_error">密码错误</string>
    <string name="error_privateKey">私钥错误,请输入正确的私钥</string>
    <string name="failure_to_create_transaction">创建交易失败</string>
    <string name="confirmation_transfer">确认转出</string>
    <string name="name">名称</string>
    <string name="address">地址</string>
    <string name="complete">完成</string>
    <string name="contacts">联系人</string>
    <string name="add_new_contacts">新建联系人</string>
    <string name="input_contacts_name">请输入联系人名称</string>
    <string name="input_contacts_address">请输入联系人地址</string>
    <string name="add_contacts_success">添加联系人成功</string>
    <string name="no_copy_code">暂不备份</string>
    <string name="cny">人民币</string>
    <string name="usd">USD</string>
    <string name="currency_setting">货币设置</string>
    <string name="message_center">消息中心</string>
    <string name="system_message">系统消息</string>
    <string name="upgrade_now">立即升级</string>
    <string name="upgrade_later">暂不升级</string>
    <string name="text_morethan_15">最多可使用15字符名称</string>
    <string name="password_must_morethan_6">当前密码过弱建议大于8位密码</string>
    <string name="input_wallet_name">请输入钱包名称</string>
    <string name="keystore_exception">keystore异常</string>
    <string name="unknow_exception">未知异常</string>
    <string name="privatekey_exception">私钥异常</string>
    <string name="PARAMS_ERROR">参数错误</string>
    <string name="save_privatekey_error">本地存储加密私钥失败</string>
    <string name="header_pulling">下拉可以刷新</string>
    <string name="header_refreshing">正在刷新...</string>
    <string name="header_loading">正在加载...</string>
    <string name="header_release">释放立即刷新</string>
    <string name="header_finish">刷新完成</string>
    <string name="header_failed">刷新失败</string>
    <string name="header_update">上次更新 M-d HH:mm</string>
    <string name="header_secondary">释放查看全部钱包</string>
    <string name="footer_pulling">上拉加载更多</string>
    <string name="footer_release">释放立即加载</string>
    <string name="footer_loading">正在刷新...</string>
    <string name="footer_refreshing">正在加载...</string>
    <string name="footer_finish">加载完成</string>
    <string name="footer_failed">加载失败</string>
    <string name="footer_nothing">全部加载完成</string>
    <string name="payment_address">发款地址</string>
    <string name="receivables_address">收款地址</string>
    <string name="miners_fees">手续费</string>
    <string name="remark">备注</string>
    <string name="txid">txid</string>
    <string name="block_height">区块高度</string>
    <string name="trans_date">交易日期</string>
    <string name="transaction_record">交易记录</string>
    <string name="copy_to_clipboard">已复制到剪贴板</string>
    <string name="yesterday_earnings">昨日收益 </string>
    <string name="yesterday">NULS </string>
    <string name="earnings">共识 </string>
    <string name="accumulated_income">累计收益 </string>
    <string name="null_content">-- --</string>
    <string name="entrusted">已委托</string>
    <string name="commission_rate">佣金比例</string>
    <string name="bond">保证金</string>
    <string name="credit_value">信用值</string>
    <string name="node_penalty">节点惩罚</string>
    <string name="nuls">NULS</string>
    <string name="consensus_number">共识数量</string>
    <string name="input_key_to_search">输入关键词查找</string>
    <string name="to">至</string>
    <string name="my_agent">我的节点</string>
    <string name="join_agent">参与节点</string>
    <string name="please_choice">请选择</string>
    <string name="my_consensus">我的共识</string>
    <string name="loading">正在加载中...</string>
    <string name="get_balance_error">获取钱包余额失败</string>
    <string name="income_details">收益详情</string>
    <string name="delete_contact">确定删除该联系人？</string>
    <string name="transaction_success">转账成功</string>
    <string name="transaction_fail">转账失败</string>
    <string name="address_error_chainid">地址和链id不匹配</string>
    <string name="no_transcation">暂无交易记录</string>
    <string name="safe_setting">安全设置</string>
    <string name="gesture_more_4">手势密码必须大于四位</string>
    <string name="please_re_gesture">请再次绘制</string>
    <string name="draw_a_design">绘制图案</string>
    <string name="please_draw_the_unlock_password">请绘制解锁密码</string>
    <string name="get_mnimonic_error">获取助记词失败</string>
    <string name="Incorrect_address_format">地址格式不正确</string>
    <string name="wallet_manage">钱包管理</string>
    <string name="load_wallet_error">加载钱包失败</string>
    <string name="can_join_num">NULS 可加入</string>
    <string name="hint">提示</string>
    <string name="close_guesture">确定关闭手势密码？</string>
    <string name="two_different_drawing_patterns">两次绘制图案不同，请重新绘制</string>
    <string name="creator">创建者</string>
    <string name="please_input_wallet_name">请输入钱包名</string>
    <string name="please_input_password">请输入密码</string>
    <string name="please_reset_password">请重复密码</string>
    <string name="two_password_inconsistencies">两次密码不一致</string>
    <string name="failure_to_obtain_transaction_information">获取交易信息失败</string>
    <string name="canjoin">可加入数量</string>
    <string name="save">保存</string>
    <string name="graphic_unlocking">图形解锁</string>
    <string name="create_wallet_success">创建钱包成功</string>
    <string name="backup_keystore_hint">1、建议将手机切换至飞行模式下离网操作。 2、请勿通过网络保存Keystore 请妥善保存Keystore，遗失后将无法找回</string>
    <string name="file_path">文件地址：</string>
    <string name="submit_consensus">已提交共识申请</string>
    <string name="join_consensus_hint">您已提交共识申请，需要1~2分钟等待交易确认，请关注我的共识列表</string>
    <string name="join_consensus_fail">参与共识失败</string>
    <string name="create_wallet_fail">创建钱包失败</string>
    <string name="getaddress_error">获取地址失败</string>
    <string name="import_fail">导入失败</string>
    <string name="version_log">版本日志</string>
    <string name="updated_version">更新版本</string>
    <string name="failed_to_obtain_permission">授权失败</string>
    <string name="copied">已复制</string>
    <string name="failure_to_acquire_mnemonics">获取助记词失败</string>
    <string name="choice_you_like_wallet_skin">选择一个你喜欢的钱包样式</string>
    <string name="the_order_of_mnemonic_words_is_incorrect">助记词顺序不正确，请校对</string>
    <string name="order_information">订单信息</string>
    <string name="from">由</string>
    <string name="transfer_to">转出至</string>
    <string name="actual_achievement">实际到账</string>
    <string name="failed_to_obtain_node_information">获取节点信息失败</string>
    <string name="entrusted_wallet">委托钱包</string>
    <string name="enter_the_quantity_you_want_to_delegate">输入你想委托的数量</string>
    <string name="estimated_earnings">预估收益</string>
    <string name="service_charge">手续费</string>
    <string name="confirmation_of_delegation">确认委托</string>
    <string name="enter_the_number_of_consensus_participants">请输入参与共识数量</string>
    <string name="the_number_of_participants_in_consensus_should_not_be_less_than_2000">参与共识数量不能少于2000</string>
    <string name="the_number_of_consensus_participants_exceeds_the_ceiling">参与共识数量超过上限</string>
    <string name="to_await_consensus">待共识</string>
    <string name="in_consensus">共识中</string>
    <string name="whole">全部</string>
    <string name="no_contact_at_present">暂无联系人</string>
    <string name="copy_code_notice">为了防止他人利用其盗取资产，千万不要保存到网络上！请务必使用 【纸笔抄写】 你的助记词，并将它妥善保管，如果被他人获得，您的资产将会被轻易盗取。</string>
    <string name="please_read_and_agree_to_the_privacy_clause_first">请先阅读并同意隐私条款</string>
    <string name="failure_of_mnemonic_generation">助记词生成失败</string>
    <string name="draw_an_unlock_pattern">绘制解锁图案，请至少连接4个点</string>
    <string name="name_the_import_wallet">给导入的钱包起个名</string>
    <string name="hd_wallet_donot_save_alisa">因去中心化钱包不会保存钱包名称和样式</string>
    <string name="login">登录</string>
    <string name="login_cancel">取消登录</string>
    <string name="login_confirmation">钱包登录确认</string>
    <string name="enter_name">请输入名称</string>
    <string name="enter_address">请输入地址</string>
    <string name="select_network">选择网络</string>
    <string name="please_select_network">请选择网络</string>
    <string name="dapp_auth_hint">输入密码完成授权</string>
    <string name="dont_ask_again">以后不再询问</string>
</resources>