<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include
        layout="@layout/base_title_layout">

    </include>

    <TextView
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/textcolor_black_3"
        android:text="@string/name_the_import_wallet"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:textColor="@color/textcolor_black"
        android:layout_marginTop="20dp"
        android:text="@string/hd_wallet_donot_save_alisa"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />



    <EditText
        android:textColorHint="@color/textcolor_gray"
        android:gravity="center_vertical|left"
        android:paddingLeft="16dp"
        android:maxLength="13"
        android:id="@+id/edit_wallet_name"
        android:textColor="@color/textcolor_black_3"
        android:singleLine="true"
        android:textSize="14sp"
        android:transitionName="wallet_name"
        android:hint="@string/wallet_name"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/shape_black_no3"
        android:layout_width="match_parent"
        android:layout_height="44dp" />


    <Button
        style="@style/GreenButton"
        android:text="@string/next"
        android:id="@+id/btn_next"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:layout_width="match_parent"
        android:layout_height="44dp" />


</LinearLayout>