<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <!--  扫码登录确认页面  -->


    <include

        layout="@layout/base_title_layout"></include>



    <TextView
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login_confirmation"
        android:textSize="18sp"
        android:textStyle="bold"
        android:drawableTop="@mipmap/computer"
        android:textColor="@color/textcolor_black_3"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_height="wrap_content"/>


    <Button
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        style="@style/GreenButton"
        android:layout_marginBottom="100dp"
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        style="@style/MyButton"
        android:layout_margin="24dp"
        android:id="@+id/btn_cancel"
        android:text="@string/login_cancel"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>




</RelativeLayout>