<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">




    <TextView
        android:layout_gravity="center_horizontal"
        android:text="@string/use_keystore_import"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/textcolor_black_3"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginRight="@dimen/margin32"
        android:gravity="center"
        android:layout_marginLeft="@dimen/margin32"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:lineSpacingExtra="5dp"
        android:layout_height="44dp"
        android:text="@string/use_keystore_import_hint"
        android:textColor="@color/textcolor_black"
        android:textSize="13sp"
        />


    <EditText
        android:id="@+id/edit_filecontent"
        android:textSize="14sp"
        android:gravity="top|left"
        android:hint="@string/keystore_file_content"
        android:paddingLeft="17dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingRight="17dp"
        android:textColorHint="@color/textcolor_gray"
        android:background="@drawable/shape_black_no3"
        android:layout_marginRight="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="110dp" />


    <Button
        android:id="@+id/btn_addfile"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/main"
        android:stateListAnimator="@null"
        android:text="@string/add_keystore_file"
        android:background="@drawable/shape_lightgreen"
        android:layout_marginRight="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="44dp" />
    <RelativeLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edit_password"
            android:textColorHint="#AAB2C9"
            android:hint="@string/input_wallet_password"

            android:textSize="15sp"
            android:inputType="textPassword"
            android:paddingTop="13dp"
            android:paddingBottom="13dp"
            android:layout_marginRight="@dimen/margin16"
            android:layout_marginLeft="@dimen/margin16"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:textColor="@color/textcolor_black_3"
            android:layout_height="wrap_content" />
        <CheckBox
            android:visibility="gone"
            android:id="@+id/chedkbox_psw_checked"
            android:layout_centerVertical="true"
            android:checked="true"
            android:button="@drawable/password_open_checked"
            android:layout_marginRight="@dimen/margin32"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
    <View
        android:layout_marginLeft="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:background="#E9EBF3"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <TextView

        android:layout_marginLeft="16dp"
        android:layout_marginTop="3dp"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:id="@+id/tv_hint1"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:visibility="gone"
        android:clickable="true"
        android:textSize="14sp"
        android:textColor="@color/main"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/what_is_keystore"
        android:id="@+id/tv_whatiskeystore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <Button
        android:gravity="center"
        android:text="@string/next"
        android:enabled="false"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="@dimen/margin32"
        android:layout_marginLeft="@dimen/margin32"
        android:id="@+id/btn_next"
        style="@style/GreenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
        </LinearLayout>

    </ScrollView>
</LinearLayout>