<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:clickable="true"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_white"
        android:layout_width="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/textcolor_black"
            android:layout_marginTop="22dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:text="@string/dapp_auth_hint"
            android:layout_height="wrap_content" />



        <EditText
            android:inputType="textPassword"
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:background="@null"
            android:layout_marginLeft="24dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginRight="24dp"
            android:hint="@string/input_password"
            android:textSize="16sp"
            android:gravity="left|center_vertical"
            android:textColorHint="@color/textcolor_gray"
            android:textColor="@color/textcolor_black_3"
            android:layout_marginTop="24dp"
            android:layout_height="40dp" />





        <View
            android:layout_below="@id/edit_password"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="#AAB2C9"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <CheckBox
                android:button="@drawable/check_selector_layout"
                android:layout_width="wrap_content"
                android:layout_marginLeft="24dp"
                android:id="@+id/check_longAuth"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/dont_ask_again"
                android:textColor="@color/textcolor_gray"
                android:layout_marginLeft="8dp"
                android:textSize="13sp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="24dp"
            android:layout_height="40dp">



            <Button
                android:id="@+id/btn_cancel"
                android:textSize="16sp"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                style="@style/MyButton"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/btn_sure"
                android:gravity="center"
                android:text="@string/sure"
                android:layout_marginLeft="24dp"
                style="@style/GreenButton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>