<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- 复制私钥 -->

    <include

        layout="@layout/base_title_layout"
        ></include>


   <TextView
       android:textStyle="bold"
       android:textSize="22sp"
       android:layout_marginTop="50dp"
       android:layout_gravity="center_horizontal"
        android:textColor="@color/textcolor_black_3"
       android:text="@string/copy_personal_key"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/warning"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="@dimen/margin16"
        android:textColor="@color/textcolor_warning"
        android:layout_height="wrap_content" />


    <TextView
        android:textSize="13sp"
        android:lineSpacingExtra="8dp"
        android:paddingBottom="@dimen/margin16"
        android:paddingTop="@dimen/margin16"
        android:paddingRight="@dimen/margin16"
        android:paddingLeft="@dimen/margin16"
        android:background="@drawable/shape_warning"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_width="match_parent"
        android:textColor="@color/textcolor_warning"
        android:text="@string/copy_personal_key_warning"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/textcolor_black_3"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="@dimen/margin16"
        android:text="@string/personal_key"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_personal_key"
        android:textSize="13sp"
        android:textIsSelectable="true"
        android:lineSpacingExtra="8dp"
        android:paddingBottom="@dimen/margin16"
        android:paddingTop="@dimen/margin16"
        android:paddingRight="@dimen/margin16"
        android:paddingLeft="@dimen/margin16"
        android:background="@drawable/shape_gray"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginRight="@dimen/margin16"
        android:layout_marginLeft="@dimen/margin16"
        android:layout_width="match_parent"
        android:textColor="@color/textcolor_black_3"
        android:text="@string/copy_personal_key_warning"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_next"
        style="@style/GreenButton"
        android:text="@string/copy_personal_key"
        android:layout_marginTop="100dp"
        android:layout_marginRight="@dimen/margin32"
        android:layout_marginLeft="@dimen/margin32"
        android:layout_width="match_parent"
        android:layout_height="44dp" />


</LinearLayout>